@@ -12,6 +12,18 @@ CHANGES
     distinct class encountered in the polymorphic
     result.  [ticket:2480]
 
+  - [bug] Fixed bug in declarative 
+    whereby the precedence of columns 
+    in a joined-table, composite
+    column (typically for id) would fail to
+    be correct if the columns contained
+    names distinct from their attribute 
+    names.  This would cause things like
+    primaryjoin conditions made against the
+    entity attributes to be incorrect.  Related
+    to [ticket:1892] as this was supposed
+    to be part of that, this is [ticket:2491].
+
 - oracle
   - [bug] Added ROWID to oracle.*, [ticket:2483]
 
